header align left, responsive registration error message, fix bug with dates on analytics, add new items to generate prompts

--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,14 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-ul.header {
+.header {
   background-color: #111;
   padding: 0;
+  display: flex;;
 }
 
 ul.header li {
-  display: inline; /* display links in one line horizontally */
+  list-style-type: none;
 }
 
 ul.header li a {
