--- a/src/RegistrationComponent/Registration.css
+++ b/src/RegistrationComponent/Registration.css
@@ -6,6 +6,7 @@
  
  .form-validation {
   color: red;
+  display: block;
  }
  
  .card {
